# trudp

./: .gitignore  .gitlab-ci.yml  .gitmodules  Doxyfile  Makefile.am  README.md  autogen.sh  azure-pipelines.yml  build-debug.sh  build-release.sh  config.h.in~  configure.ac  main.cpp  snake.c  snake.h  trudpcat.c  trudpcat.sh  trudpcat_ev.c
.circleci/: config.yml
ci-build-data/: build-ubuntu.sh
embedded/libteoccl/: .gitignore  Makefile.am  README.md  configure.ac
embedded/libteoccl/po/: POTFILES.in
embedded/libteoccl/src/: Makefile.am  hash.c  hash.h  libteoccl.pc  libteoccl.pc.in  map.c  map.h  queue  queue.c  queue.h  queue.hpp
embedded/libteoccl/tests/: Makefile.am  main_cpp_t.cpp  main_t.c  map_t.c  queue_cpp.cpp  queue_cpp_t.cpp  queue_t.c  teoccl_tst
examples/: Makefile.am  README.md  cudp.c  read_queue.c  read_queue.h  snake.c  snake.h  sudp.c  trudp2p  trudp2p.c  trudp_loop.sh  trudp_pth.c  trudp_pth.h  trudpcat.c  trudpcat_ev.c  trudpcat_ev_wq.c
examples/.deps/: snake.Po  trudpcat_ev.Po
libtrudp/: .gitlab-ci.yml  Doxyfile  Makefile.am  configure  configure.ac  hash.c  hash.h  map.c  map.h  packet.c  packet.h  packet_queue.c  packet_queue.h  queue.c  queue.h  send_queue.c  send_queue.h  timed_queue.c  timed_queue.h  tr-udp.c  tr-udp.h  tr-udp_stat.c  tr-udp_stat.h  udp.c  udp.h  utils.c  utils.h  utils_r.h  write_queue.c  write_queue.h
libtrudp/examples/: Makefile.am  trudpcat.c  trudpcat_ev.c
libtrudp/src/: Makefile.am  hash.c  libtrudp.pc.in  map.c  packet.c  packet_queue.c  queue.c  queue.h  tr-udp.c  tr-udp.h  tr-udp_stat.c  tr-udp_stat.h  udp.c  utils.c
libtrudp/tests/: Makefile.am  hash_t.c  map_t.c  packet_queue_t.c  packet_t.c  queue_t.c  timed_queue_t.c  tr-udp_t.c
msvs/: trudp.sln
msvs/trudp-dynamic/: trudp-dynamic.vcxproj  trudp-dynamic.vcxproj.filters
msvs/trudp-static/: trudp-dynamic.vcxproj  trudp-dynamic.vcxproj.filters  trudp-static.vcxproj  trudp-static.vcxproj.filters
msvs/trudp-test-static/: trudp-test-static.vcxproj  trudp-test-static.vcxproj.filters
nbproject/: Makefile-Debug.mk  Makefile-MinGW-w64-Debug.mk  Makefile-MinGW-w64-Win32-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-MinGW-w64-Debug.bash  Package-MinGW-w64-Win32-Debug.bash  Package-Release.bash  configurations.xml  project.xml
po/: POTFILES.in
src/: Makefile.am  debug_log.h  hash.c  hash.h  hash.lo  libtrudp.la  map.c  map.h  map.lo  packet.c  packet.h  packet.lo  packet_queue.c  packet_queue.h  packet_queue.lo  queue.c  queue.h  queue.lo  tr-udp.c  tr-udp.h  trudp.c  trudp.h  trudp.lo  trudp_api.h  trudp_channel.c  trudp_channel.h  trudp_channel.lo  trudp_const.h  trudp_ev.c  trudp_ev.h  trudp_options.c  trudp_options.h  trudp_receive_queue.c  trudp_receive_queue.h  trudp_send_queue.c  trudp_send_queue.h  trudp_stat.c  trudp_stat.h  trudp_stat.lo  trudp_utils.c  (+11 more)
src/.deps/: hash.Plo  map.Plo  packet.Plo  packet_queue.Plo  queue.Plo  trudp.Plo  trudp_stat.Plo  udp.Plo  utils.Plo  write_queue.Plo
tests/: Makefile.am  main_t.c  map_t.c  packet_queue_t.c  packet_t.c  queue_t.c  tr-udp_t.c
tests/.deps/: map_t.Po  packet_queue_t.Po  packet_t.Po  queue_t.Po  tr-udp_t.Po
tests/cheat/: cheat.h
tools/: Makefile.am  build-centos.sh  build-opensuse.sh  build-ubuntu.sh  make_deb.sh  make_deb_inc.sh  make_deb_keys_add.sh  make_package.c  make_remote_doc_upload.sh  make_remote_download.sh  make_remote_install.sh  make_remote_upload.sh  make_rpm.sh  make_rpm_inc.sh
win_vcxproj/: libtrudp.sln
win_vcxproj/libtrudp/: libtrudp.vcxproj  libtrudp.vcxproj.filters
